--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-konva": "^19.0.7",
     "react-use-gesture": "^9.1.3",
+    "use-image": "^1.1.4",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
