--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "konva": "^9.3.22",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-konva": "^19.0.7",
     "react-use-gesture": "^9.1.3",
     "use-image": "^1.1.4",
