--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.6",
     "konva": "^9.3.22",
     "react": "^19.1.0",
